--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <title>Pizza dough</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg" />
+    <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
     <!-- Google tag (gtag.js) -->
     <script
       async
